--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
   <link rel="stylesheet" href="../../layuiadmin/style/student.css">
   <link rel="stylesheet" href="../../layuiadmin/style/formBox.css">
+  <link rel="stylesheet" href="../../layuiadmin/style/sideUpaload.css">
 </head>
 
 <body>
@@ -34,8 +35,8 @@
           <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改学生信息</button>
           <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找学生信息</button>
           <button id="uploadStBt" class="layui-btn"><i class="layui-icon layui-icon-upload-drag"></i>导入学生信息</button>
-          <button class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载学生信息导入模板</button>
-          <button class="layui-btn"><i class="layui-icon layui-icon-export"></i>导出学生信息</button>
+          <button onclick="uploadStTe()" class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载学生信息导入模板</button>
+          <button onclick="exportSt()" class="layui-btn"><i class="layui-icon layui-icon-export"></i>导出学生信息</button>
         </div>
       </div>
       <div class="condition-box layui-anim layui-anim-scale" id="condition">
@@ -139,7 +140,8 @@
       <div class="change-box layui-anim layui-anim-scale" id="changeBox">
         <div class="header">
           <div>修改学生信息</div>
-          <div onclick="document.getElementById('changeBox').style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+          <div onclick="document.getElementById('changeBox').style.display = 'none'"><i
+              class="layui-icon layui-icon-close"></i></div>
         </div>
         <div class="form-box layui-form" lay-filter="changeStForm">
           <div class="layui-form-item input-box">
@@ -194,6 +196,13 @@
           <table id="students" lay-filter="test"></table>
         </div>
       </div>
+    </div>
+    <div class="side-upload" id="sideUpload">
+      <div class="header">
+        <div>下载列表</div>
+        <div onclick="sub.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+      </div>
+      <div class="article" id="uploadList"></div>
     </div>
   </div>
 
@@ -296,7 +305,7 @@
         checkbar: true,
         checkbarType: "no-all",
         checkbarFun: {
-          chooseDone: function(checkbarNodesParam) {
+          chooseDone: function (checkbarNodesParam) {
             classData = checkbarNodesParam;
             console.log(classData)
             return;
@@ -351,11 +360,11 @@
 
       // 删除学生信息
       let deleteBt = document.getElementById("deleteBt");
-      
+
       deleteBt.addEventListener("click", function () {
         let checkStatus = table.checkStatus('idTest');
 
-        if(checkStatus.data.length < 1) {
+        if (checkStatus.data.length < 1) {
           layer.msg("请至少选择一条有效学生信息");
           return;
         }
@@ -366,12 +375,12 @@
           skin: 'delete-confirm',
           area: ['300px', '200px'],
           btn: ['确定', '取消'],
-          yes: function(index, layero) {
+          yes: function (index, layero) {
             console.log('确定删除');
             reloadTable();
             layer.close(index);
           },
-          btn2: function(index, layero) {
+          btn2: function (index, layero) {
             console.log('取消删除');
             layer.close(index);
           },
@@ -438,7 +447,7 @@
         validate = true;
         layer.msg("成功修改校内ID为 " + changeInfo.id + " 的学生相关信息")
       });
-      if(validate){
+      if (validate) {
         reLoadTable();
       }
     }
