--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -35,8 +35,9 @@
           <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改学生信息</button>
           <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找学生信息</button>
           <button id="uploadStBt" class="layui-btn"><i class="layui-icon layui-icon-upload-drag"></i>导入学生信息</button>
-          <button onclick="uploadStTe()" class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载学生信息导入模板</button>
+          <button onclick="exportStTe()" class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载学生信息导入模板</button>
           <button onclick="exportSt()" class="layui-btn"><i class="layui-icon layui-icon-export"></i>导出学生信息</button>
+          <button onclick="sub.style.display = 'block'" class="layui-btn"><i class="layui-icon layui-icon-cols"></i>打开下载列表</button>
         </div>
       </div>
       <div class="condition-box layui-anim layui-anim-scale" id="condition">
@@ -489,6 +490,7 @@
   <script src="../../layuiadmin/modules/search.js"></script>
   <script src="../../layuiadmin/modules/add.js"></script>
   <script src="../../layuiadmin/modules/upload.js"></script>
+  <script src="../../layuiadmin/modules/exportInfo.js"></script>
 </body>
 
 </html>
