add jurisdictionMange and wxManage

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -97,6 +97,18 @@
                 <cite>缴费管理</cite>
               </a>
             </li>
+            <li data-name="template" class="layui-nav-item">
+              <a href="javascript:;" lay-href="jurisdiction/manage.html" lay-tips="缴费管理" lay-direction="2">
+                <i class="layui-icon layui-icon-set"></i>
+                <cite>权限管理</cite>
+              </a>
+            </li>
+            <li data-name="template" class="layui-nav-item">
+              <a href="javascript:;" lay-href="wx/manage.html" lay-tips="缴费管理" lay-direction="2">
+                <i class="layui-icon layui-icon-login-wechat" style="color: rgba(255,255,255,.7);"></i>
+                <cite>微信管理</cite>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
