finish func of wxManage

--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -216,7 +216,7 @@
     }).use(['index', 'console']);
 
 
-    // ------------dtree相关--------------
+    // -------------------dtree相关-------------------
     var demoTree = [
       {
         id: "1",
