--- a/src/views/wx/manage.html
+++ b/src/views/wx/manage.html
@@ -12,19 +12,221 @@
   <link rel="stylesheet" href="../../layuiadmin/style/dtree/dtree.css">
   <link rel="stylesheet" href="../../layuiadmin/style/dtree/font/dtreefont.css">
   <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
+  <link rel="stylesheet" href="../../layuiadmin/style/wx.css">
+  <link rel="stylesheet" href="../../layuiadmin/style/formBox.css">
 </head>
 
 <body>
-    <div class="main-article">
-        微信管理
+  <div class="main-article">
+    <div class="func-box">
+      <div class="header">操作</div>
+      <div class="article">
+        <button id="addBt" class="layui-btn"><i class="layui-icon layui-icon-add-circle"></i>新增公众号信息</button>
+        <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除公众号信息</button>
+        <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改公众号信息</button>
+        <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找公众号信息</button>
+      </div>
     </div>
-</body>
+    <div class="add-box layui-anim layui-anim-scale" id="addBox">
+      <div class="header">
+        <div>新增公众号</div>
+        <div onclick="abox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+      </div>
+      <div class="form-box layui-form" lay-filter="addWxForm">
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">绑定机构</label>
+          <div class="layui-input-block">
+            <select id="orgSelect" name="organization" lay-verify="required">
+              <option value=""></option>
+              <option value="0">网融科技</option>
+              <option value="1">晋宁一中</option>
+              <option value="2">昆明二中</option>
+            </select>
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">公开ID</label>
+          <div class="layui-input-block">
+            <input type="text" name="wxid" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">Token</label>
+          <div class="layui-input-block">
+            <input type="text" name="token" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+      </div>
+      <div class="btn-box"><button class="layui-btn" onclick="addWx()">确定</button></button></div>
+    </div>
+    <div class="change-box layui-anim layui-anim-scale" id="changeBox">
+      <div class="header">
+        <div>修改公众号</div>
+        <div onclick="cbox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+      </div>
+      <div class="form-box layui-form" lay-filter="changeWxForm">
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">ID</label>
+          <div class="layui-input-block">
+            <input type="text" name="id" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">绑定机构</label>
+          <div class="layui-input-block">
+            <select id="orgSelect" name="organization" lay-verify="required">
+              <option value=""></option>
+              <option value="0">网融科技</option>
+              <option value="1">晋宁一中</option>
+              <option value="2">昆明二中</option>
+            </select>
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">公开ID</label>
+          <div class="layui-input-block">
+            <input type="text" name="wxid" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">Token</label>
+          <div class="layui-input-block">
+            <input type="text" name="token" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+      </div>
+      <div class="btn-box"><button class="layui-btn" onclick="changeWx()">确定</button></button></div>
+    </div>
+    <div class="condition-box layui-anim layui-anim-scale" id="condition">
+      <div class="header">
+        <div>查找公众号</div>
+        <div onclick="cdb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+      </div>
+      <div class="form-box layui-form" lay-filter="conditionForm">
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">ID</label>
+          <div class="layui-input-block">
+            <input type="text" name="id" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">绑定机构</label>
+          <div class="layui-input-block">
+            <select id="orgSelect" name="organization" lay-verify="required">
+              <option value=""></option>
+              <option value="0">网融科技</option>
+              <option value="1">晋宁一中</option>
+              <option value="2">昆明二中</option>
+            </select>
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">公开ID</label>
+          <div class="layui-input-block">
+            <input type="text" name="wxid" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">Token</label>
+          <div class="layui-input-block">
+            <input type="text" name="token" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+      </div>
+      <div class="btn-box"><button class="layui-btn" onclick="searchWx()">确定</button></button></div>
+    </div>
+    <div class="table-box">
+      <div class="header">公众号信息</div>
+      <div class="article">
+        <table id="wx" lay-filter="test"></table>
+      </div>
+    </div>
+  </div>
 
-<script src="../../layuiadmin/layui/layui.js"></script>
-<script>
+  <script src="../../layuiadmin/layui/layui.js"></script>
+  <script>
     layui.config({
       base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
       index: 'lib/index' //主入口模块
     }).use(['index', 'console']);
-</script>
+
+
+
+    // ----------table组件相关------------------
+    var tableDate = [
+      { id: 1, organization: "晋宁一中", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+      { id: 2, organization: "昆明三中", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+      { id: 3, organization: "师大附中", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+      { id: 4, organization: "网融科技", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+    ]
+    //  初始化table
+    layui.use(['table', 'layer', 'form'], function () {
+      var table = layui.table;
+      var layer = layui.layer;
+      var form = layui.form;
+
+      //第一个实例
+      table.render({
+        elem: '#wx'
+        , id: 'idTest'
+        , height: 475
+        , data: tableDate
+        , page: true //开启分页
+        , cols: [[ //表头
+          { checkbox: true, width: "5%" }
+          , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
+          , { field: 'organization', title: '绑定机构', width: "30%", minWidth: 200 }
+          , { field: 'wxid', title: '公开ID', width: "30%", minWidth: 200 }
+          , { field: 'token', title: 'Token', width: "30%", minWidth: 200 }
+        ]]
+      });
+    })
+    // ----------table组件相关（结束）------------------
+
+
+
+
+    // ----------------------部分独立方法---------------------------
+    function reloadTable() {
+      var tableDate = [
+        { id: 1, organization: "晋宁一中", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+        { id: 2, organization: "昆明三中", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+        { id: 3, organization: "师大附中", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+        { id: 4, organization: "网融科技", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+        { id: 5, organization: "网融科技", wxid: "gh_12311136322", token: "zvwjdkaj3131313" },
+      ]
+      //  初始化table
+      layui.use(['table', 'layer', 'form'], function () {
+        var table = layui.table;
+        var layer = layui.layer;
+        var form = layui.form;
+
+        //第一个实例
+        table.render({
+          elem: '#wx'
+          , id: 'idTest'
+          , height: 475
+          , data: tableDate
+          , page: true //开启分页
+          , cols: [[ //表头
+            { checkbox: true, width: "5%" }
+            , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
+            , { field: 'organization', title: '绑定机构', width: "30%", minWidth: 200 }
+            , { field: 'wxid', title: '公开ID', width: "30%", minWidth: 200 }
+            , { field: 'token', title: 'Token', width: "30%", minWidth: 200 }
+          ]]
+        });
+      })
+    }
+    // ----------------------部分独立方法（结束）---------------------------
+  </script>
+  <script src="../../layuiadmin/modules/add.js"></script>
+  <script src="../../layuiadmin/modules/delete.js"></script>
+  <script src="../../layuiadmin/modules/search.js"></script>
+  <script src="../../layuiadmin/modules/change.js"></script>
+</body>
+
+
+
+</html>
