change manage of class

--- a/src/layuiadmin/style/class.css
+++ b/src/layuiadmin/style/class.css
@@ -67,6 +67,7 @@ html, body {
     flex: auto;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 .main-article .right .table-box .article {
