--- a/src/views/class/manage.html
+++ b/src/views/class/manage.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
   <link rel="stylesheet" href="../../layuiadmin/style/class.css">
   <link rel="stylesheet" href="../../layuiadmin/style/formBox.css">
+  <link rel="stylesheet" href="../../layuiadmin/style/sideUpaload.css">
 </head>
 
 <body>
@@ -33,8 +34,9 @@
           <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除班级</button>
           <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改班级</button>
           <button id="uploadClBt" class="layui-btn"><i class="layui-icon layui-icon-upload-drag"></i>导入班级信息</button>
-          <button class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载班级信息导入模板</button>
-          <button class="layui-btn"><i class="layui-icon layui-icon-export"></i>导出班级信息</button>
+          <button onclick="exportClTe()" class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载班级信息导入模板</button>
+          <button onclick="exportCl()" class="layui-btn"><i class="layui-icon layui-icon-export"></i>导出班级信息</button>
+          <button onclick="sub.style.display = 'block'" class="layui-btn"><i class="layui-icon layui-icon-cols"></i>打开下载列表</button>
         </div>
       </div>
       <div class="add-box layui-anim layui-anim-scale" id="addBox">
@@ -110,6 +112,13 @@
         <!-- <div class="article">
           <table id="payment-template" lay-filter="test"></table>
         </div> -->
+      </div>
+      <div class="side-upload" id="sideUpload">
+        <div class="header">
+          <div>下载列表</div>
+          <div onclick="sub.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+        </div>
+        <div class="article" id="uploadList"></div>
       </div>
     </div>
   </div>
@@ -403,6 +412,7 @@
   <script src="../../layuiadmin/modules/delete.js"></script>
   <script src="../../layuiadmin/modules/upload.js"></script>
   <script src="../../layuiadmin/modules/change.js"></script>
+  <script src="../../layuiadmin/modules/exportInfo.js"></script>
 </body>
 
 </html>
