--- a/src/layuiadmin/style/dialog.css
+++ b/src/layuiadmin/style/dialog.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
@@ -14,6 +14,7 @@
     width: 70%;
     height: 70%;
     min-width: 800px;
+    min-height: 600px;
     background-color: #fff;
     display: flex;
     opacity: 1;
@@ -31,6 +32,9 @@
     flex: auto;
     border-left: 1px solid #f2f2f2;
     border-right: 1px solid #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .dialog-box .dialog-article .dialog-tree-box {
@@ -39,4 +43,16 @@
     width: 100%;
     height: calc(100% - 52px);
     overflow: auto;
+}
+
+.dialog-box .dialog-article .center .dialog-btn-box {
+    height: 90%;
+    width: 90%;
+}
+
+.dialog-box .dialog-article .center .dialog-btn-box button {
+    display: block;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
 }
