--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="addUser()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="addUser()">确定</button></div>
     </div>
     <div class="change-box layui-anim layui-anim-scale" id="changeBox">
       <div class="header">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="changeUser()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="changeUser()">确定</button></div>
     </div>
     <div class="condition-box layui-anim layui-anim-scale" id="condition">
       <div class="header">
@@ -129,7 +129,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="searchUser()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="searchUser()">确定</button></div>
     </div>
     <div class="table-box">
       <div class="header">使用者信息</div>
