--- a/src/views/wx/manage.html
+++ b/src/views/wx/manage.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="addWx()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="addWx()">确定</button></div>
     </div>
     <div class="change-box layui-anim layui-anim-scale" id="changeBox">
       <div class="header">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="changeWx()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="changeWx()">确定</button></div>
     </div>
     <div class="condition-box layui-anim layui-anim-scale" id="condition">
       <div class="header">
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="searchWx()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="searchWx()">确定</button></div>
     </div>
     <div class="table-box">
       <div class="header">公众号信息</div>
