--- a/src/views/class/manage.html
+++ b/src/views/class/manage.html
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="btn-box"><button class="layui-btn" onclick="addCl()">确定</button></button></div>
+        <div class="btn-box"><button class="layui-btn" onclick="addCl()">确定</button></div>
       </div>
       <div class="change-box layui-anim layui-anim-scale" id="changeBox">
         <div class="header">
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-        <div class="btn-box"><button class="layui-btn" onclick="changeCl()">确定</button></button></div>
+        <div class="btn-box"><button class="layui-btn" onclick="changeCl()">确定</button></div>
       </div>
       <div class="table-box">
         <div class="header">班级选择</div>
