--- a/src/views/payment/manage.html
+++ b/src/views/payment/manage.html
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="addTe()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="addTe()">确定</button></div>
     </div>
     <div class="condition-box layui-anim layui-anim-scale" id="condition">
       <div class="header">
@@ -102,7 +102,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="searchTe()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="searchTe()">确定</button></div>
     </div>
     <div class="change-box layui-anim layui-anim-scale" id="changeBox">
       <div class="header">
@@ -130,7 +130,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="changeTe()">确定</button></button></div>
+      <div class="btn-box"><button class="layui-btn" onclick="changeTe()">确定</button></div>
     </div>
     <div class="table-box">
       <div class="header">模板信息</div>
