--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -90,7 +90,7 @@
             </div>
           </div>
         </div>
-        <div class="btn-box"><button class="layui-btn" onclick="searchSt()">确定</button></button></div>
+        <div class="btn-box"><button class="layui-btn" onclick="searchSt()">确定</button></div>
       </div>
       <div class="add-box layui-anim layui-anim-scale" id="addBox">
         <div class="header">
@@ -136,7 +136,7 @@
             </div>
           </div>
         </div>
-        <div class="btn-box"><button class="layui-btn" onclick="addSt()">确定</button></button></div>
+        <div class="btn-box"><button class="layui-btn" onclick="addSt()">确定</button></div>
       </div>
       <div class="change-box layui-anim layui-anim-scale" id="changeBox">
         <div class="header">
@@ -189,7 +189,7 @@
             </div>
           </div>
         </div>
-        <div class="btn-box"><button class="layui-btn" onclick="changeSt()">确定</button></button></div>
+        <div class="btn-box"><button class="layui-btn" onclick="changeSt()">确定</button></div>
       </div>
       <div class="table-box">
         <div class="header">学生信息</div>
