add list of payment

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -92,10 +92,18 @@
               </a>
             </li>
             <li data-name="template" class="layui-nav-item">
-              <a href="javascript:;" lay-href="payment/manage.html" lay-tips="缴费管理" lay-direction="2">
+              <a href="javascript:;" lay-tips="缴费管理" lay-direction="2">
                 <i class="layui-icon layui-icon-form"></i>
                 <cite>缴费管理</cite>
               </a>
+              <dl class="layui-nav-child">
+                <dd data-name="template">
+                  <a lay-href="payment/template.html">缴费模板</a>
+                </dd>
+                <dd data-name="list">
+                  <a lay-href="payment/list.html">缴费记录</a>
+                </dd>
+              </dl>
             </li>
             <li data-name="template" class="layui-nav-item">
               <a href="javascript:;" lay-href="jurisdiction/manage.html" lay-tips="权限管理" lay-direction="2">
