--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -195,8 +195,8 @@
           { checkbox: true, width: "5%" }
           , { field: 'id', title: 'ID', width: "10%" }
           , { field: 'name', title: '收费项目', width: "30%", minWidth: 300 }
-          , { field: 'date', title: '创建日期', width: "15%", minWidth: 200, sort: true }
-          , { field: 'end', title: '结束日期', width: "15%", minWidth: 200, sort: true }
+          , { field: 'date', title: '创建日期', width: "15%", minWidth: 200 }
+          , { field: 'end', title: '结束日期', width: "15%", minWidth: 200 }
           , { field: 'sum', title: '金额', width: "15%", minWidth: 150 }
           , { field: 'status', title: '状态', width: "10%", minWidth: 150 }
         ]]
@@ -263,8 +263,8 @@
             { checkbox: true, width: "5%" }
             , { field: 'id', title: 'ID', width: "10%" }
             , { field: 'name', title: '收费项目', width: "30%", minWidth: 300 }
-            , { field: 'date', title: '创建日期', width: "15%", minWidth: 200, sort: true }
-            , { field: 'end', title: '结束日期', width: "15%", minWidth: 200, sort: true }
+            , { field: 'date', title: '创建日期', width: "15%", minWidth: 200 }
+            , { field: 'end', title: '结束日期', width: "15%", minWidth: 200 }
             , { field: 'sum', title: '金额', width: "15%", minWidth: 150 }
             , { field: 'status', title: '状态', width: "10%", minWidth: 150 }
           ]]
