split dialog and bindOrUnbound

--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -107,7 +107,7 @@
     <div class="change-box layui-anim layui-anim-scale" id="changeBox">
       <div class="header">
         <div>修改模板</div>
-        <div onclick="cdb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+        <div onclick="cbox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
       </div>
       <div class="form-box layui-form" lay-filter="changeTeForm">
         <div class="layui-form-item input-box">
@@ -277,6 +277,7 @@
   <script src="../../layuiadmin/modules/delete.js"></script>
   <script src="../../layuiadmin/modules/search.js"></script>
   <script src="../../layuiadmin/modules/change.js"></script>
+  <script src="../../layuiadmin/modules/dialog.js"></script>
   <script src="../../layuiadmin/modules/bindOrUnbound.js"></script>
 </body>
 
