--- a/src/layuiadmin/style/dialog.css
+++ b/src/layuiadmin/style/dialog.css
@@ -16,19 +16,34 @@
     min-width: 800px;
     min-height: 600px;
     background-color: #fff;
-    display: flex;
     opacity: 1;
 }
 
-.dialog-box .dialog-article .left {
+.dialog-box .dialog-article .dialog-tree-fuc-box {
+    width: 100%;
+    height: 100%;
+    min-width: 800px;
+    min-height: 600px;
+    display: none;
+}
+
+.dialog-box .dialog-article .dialog-detail-fuc-box {
+    width: 100%;
+    height: 100%;
+    min-width: 800px;
+    min-height: 600px;
+    display: none;
+}
+
+.dialog-box .dialog-article .dialog-tree-fuc-box .left {
     width: 40%;
     height: 100%;
 }
-.dialog-box .dialog-article .right {
+.dialog-box .dialog-article .dialog-tree-fuc-box .right {
     width: 40%;
     height: 100%;
 }
-.dialog-box .dialog-article .center {
+.dialog-box .dialog-article .dialog-tree-fuc-box .center {
     flex: auto;
     border-left: 1px solid #f2f2f2;
     border-right: 1px solid #f2f2f2;
@@ -45,14 +60,40 @@
     overflow: auto;
 }
 
-.dialog-box .dialog-article .center .dialog-btn-box {
+.dialog-box .dialog-article .dialog-tree-fuc-box .center .dialog-btn-box {
     height: 90%;
     width: 90%;
 }
 
-.dialog-box .dialog-article .center .dialog-btn-box button {
+.dialog-box .dialog-article .dialog-tree-fuc-box .center .dialog-btn-box button {
     display: block;
     width: 100%;
     margin: 0;
     margin-bottom: 10px;
+}
+
+.dialog-box .dialog-article .dialog-detail-fuc-box .detail-list {
+    width: 100%;
+    height: calc(100% - 52px);
+    overflow: auto;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+.dialog-box .dialog-article .dialog-detail-fuc-box .detail-list .detail-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-bottom: 10px;
+}
+.dialog-box .dialog-article .dialog-detail-fuc-box .detail-list .detail-item:first-child {
+    margin-top: 10px;
+}
+
+.dialog-box .dialog-article .dialog-detail-fuc-box .detail-list .detail-sum {
+    border-top: 1px solid #f2f2f2;
+    padding: 10px 20px;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-end;
 }
